# baker

ipa_dirt_detection/common/test/: CMakeLists.txt  dirt_detection_standalone_spectral.cpp  dirt_detection_standalone_spectral.h
ipa_dirt_detection_dataset_tools/src/: image_blender.cpp
